kubernetes/required-labels/contraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-opa-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespace: ["opa-test"]
  parameters:
    labels: ["opa-test"]
